created why choose us section

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
   --btn-bg: #0073e1;
   --secondary-bg: #fafcff;
+  --text-color: #5c727d;
 }
 
 @media (prefers-color-scheme: dark) {
