--- a/src/components/shared/PropertyCard/PropertyCard.css
+++ b/src/components/shared/PropertyCard/PropertyCard.css
@@ -1,5 +1,5 @@
 .property-card:hover {
-  box-shadow: rgba(7, 152, 255, 0.09) 0px 3px 5px;
+  box-shadow: 1px 3px 20px 9px rgba(7, 152, 255, 0.11);
 }
 
 .property-card .card-img {
