--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,15 @@ html {
   @apply bg-[var(--btn-bg)] text-white;
 }
 
+.header-btn {
+  @apply bg-[#0073e1] hover:bg-[var(--header-bg)] duration-300 text-sm py-2 px-5 text-white capitalize font-semibold rounded cursor-pointer;
+}
 .primary-btn {
   @apply bg-[#0073e1] hover:bg-transparent duration-300 text-sm py-2 px-5 text-white capitalize font-semibold rounded cursor-pointer border-[var(--btn-bg)] border hover:text-[var(--btn-bg)];
 }
 
-.secondary-btn{
-  @apply bg-transparent hover:bg-[#0073e1]  duration-300 text-sm py-2 px-5 hover:text-white capitalize font-semibold rounded cursor-pointer border-[var(--btn-bg)] border text-[var(--btn-bg)]
+.secondary-btn {
+  @apply bg-transparent hover:bg-[#0073e1]  duration-300 text-sm py-2 px-5 hover:text-white capitalize font-semibold rounded cursor-pointer border-[var(--btn-bg)] border text-[var(--btn-bg)];
 }
 
 .header-scrolled {
