--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,10 @@ svg.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-vubbuv {
   @apply hidden !important;
 }
 
+.cards-container{
+  @apply grid grid-cols-1 xl:grid-cols-3 gap-5 xl:gap-8 mt-5 xl:mt-10
+}
+
 /* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
 /** {
   scrollbar-width: thin;
