added admin updated feature

--- a/src/Layouts/DashboardLayout/DashboardLayout.css
+++ b/src/Layouts/DashboardLayout/DashboardLayout.css
@@ -70,6 +70,8 @@
   }
 }
 
-.dashboard .agent-form {
+.dashboard .agent-form,
+.dashboard .admin-form,
+.dashboard .property-form {
   @apply flex flex-col items-stretch gap-10;
 }
